--- a/.gitignore
+++ b/.gitignore
@@ -163,24 +163,9 @@ cython_debug/
 # data
 */data/input/*
 */data/output/*
-data/input/edges_191120.csv
-data/input/nodes_191120.csv
-data/input/test_comments_subs.pkl
-data/input/train_comments_subs.pkl
-data/input/val_comments_subs.pkl
-data/output/simple_recipe_ingredient_graph/edges_191120.csv
-data/output/simple_recipe_ingredient_graph/nodes_191120.csv
-data/input/extended_recipes_with_quantities.json
-data/input/minimal_recipe_dataset.pkl
-data/intermediary/recipes_with_ingr_cnt_to_step.pkl
-data/output/simple_recipe_with_context_simple_instructions/edges_191120.csv
-data/output/simple_recipe_with_context_simple_instructions/nodes_191120.csv
-data/output/simple_recipe_with_context_structured_instructions/edges.csv
-data/output/simple_recipe_with_context_structured_instructions/nodes.csv
-data/output/simple_recipe_with_context_structured_instructions_arc/edges_191120.csv
-data/output/simple_recipe_with_context_structured_instructions_arc/nodes_191120.csv
-data/input/tmp_total_arcelik_only_comments.pkl
-data/intermediary/step_dicts.pkl
-data/intermediary/distinct_verbs_cnt.pkl
-data/intermediary/ingredient_to_node_idx.pkl
-data/intermediary/nodes_to_tokens.pkl
+data/input/*
+data/output/simple_recipe_ingredient_graph/*
+data/output/simple_recipe_with_context_simple_instructions/*
+data/output/simple_recipe_with_context_structured_instructions/*
+data/output/simple_recipe_with_context_structured_instructions_arc/*
+data/intermediary/*
